@@ -1,3 +1,8 @@
+2012-06-19  Kai Tietz  <ktietz@redhat.com>
+
+	* math/fpclassify.c: Special-case x64.
+	* math/fpclassifyf.c: Likewise.
+
 2012-06-06  Ozkan Sezer  <sezeroz@gmail.com>
 
 	* lib32/winhttp.def (WinHttpCheckPlatform): Add missing @0
